--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tstype-common",
+  "name": "tstype-schema",
   "version": "1.0.0",
-  "description": "TSType Definition",
+  "description": "TSType schema declarations",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/k8w/tstype-common.git"
+    "url": "git+https://github.com/k8w/tstype-schema.git"
   },
   "keywords": [
     "TSType",
@@ -28,7 +28,7 @@
   "author": "k8w",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/k8w/tstype-common/issues"
+    "url": "https://github.com/k8w/tstype-schema/issues"
   },
   "homepage": "https://github.com/k8w/tstype#readme"
 }
