--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsbuffer-schema",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "description": "TSBuffer schema declarations",
   "main": "index.js",
   "type": "module",
@@ -36,6 +36,7 @@
   },
   "homepage": "https://github.com/k8w/tsbuffer#readme",
   "devDependencies": {
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.2.3"
   }
 }
