--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "tsbuffer-schema",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "TSBuffer schema declarations",
-  "main": "index.js",
+  "main": "index.cjs",
+  "exports": {
+    "require": "./index.cjs",
+    "import": "./index.mjs"
+  },
   "type": "module",
   "typings": "index.d.ts",
   "scripts": {
     "bp": "tsc --noEmit && npm version patch && npm run build && cd dist && npm publish && cd ..",
-    "build": "rm -rf dist && npx tsc && npm run copy-dts && cp package.json README.md LICENSE dist/",
-    "copy-dts": "copyfiles -u 1 \"src/**/*.d.ts\" dist/src"
+    "build": "rm -rf dist && npx rollup -c && cp package.json README.md LICENSE dist/"
   },
   "repository": {
     "type": "git",
@@ -36,7 +39,9 @@
   },
   "homepage": "https://github.com/k8w/tsbuffer#readme",
   "devDependencies": {
-    "copyfiles": "^2.4.1",
+    "rollup": "^2.42.3",
+    "rollup-plugin-dts": "^3.0.1",
+    "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.3"
   }
 }
