--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsbuffer-schema",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "TSBuffer schema declarations",
   "main": "index.cjs",
   "exports": {
@@ -11,7 +11,10 @@
   "typings": "index.d.ts",
   "scripts": {
     "bp": "tsc --noEmit && npm version patch && npm run build && cd dist && npm publish && cd ..",
-    "build": "rm -rf dist && npx rollup -c && cp package.json README.md LICENSE dist/"
+    "build": "npm run build:js && npm run build:dts && npm run build:doc && cp package.json LICENSE README.md dist/",
+    "build:js": "rm -rf dist && npx rollup -c",
+    "build:dts": "rm -rf lib && npx tsc && npx api-extractor run --local --verbose && node scripts/removePrivate.js && rm -rf lib",
+    "build:doc": "rm -rf docs/references && npx api-documenter markdown --input temp --output docs/references"
   },
   "repository": {
     "type": "git",
@@ -40,7 +43,8 @@
   "homepage": "https://github.com/k8w/tsbuffer#readme",
   "devDependencies": {
     "rollup": "^2.42.3",
-    "rollup-plugin-dts": "^3.0.1",
+    "@microsoft/api-documenter": "^7.12.14",
+    "@microsoft/api-extractor": "^7.13.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "typescript": "^4.2.3"
   }
