--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "typings": "index.d.ts",
   "scripts": {
     "bp": "tsc --noEmit && npm version patch && npm run build && cd dist && npm publish && cd ..",
-    "build": "npm run build:js && npm run build:dts && npm run build:doc && cp package.json LICENSE README.md dist/",
+    "build": "npm run build:js && npm run build:dts && cp package.json LICENSE README.md dist/",
     "build:js": "rm -rf dist && npx rollup -c",
     "build:dts": "rm -rf lib && npx tsc && npx api-extractor run --local --verbose && node scripts/removePrivate.js && rm -rf lib",
     "build:doc": "rm -rf docs/api && npx api-documenter markdown --input temp --output docs/api"
@@ -46,6 +46,7 @@
     "@microsoft/api-extractor": "^7.15.0",
     "rollup": "^2.46.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
 }
