--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsbuffer-schema",
-  "version": "2.0.1-dev.2",
+  "version": "2.0.1",
   "description": "TSBuffer schema declarations",
   "main": "index.cjs",
   "exports": {
@@ -42,11 +42,11 @@
   },
   "homepage": "https://github.com/k8w/tsbuffer#readme",
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.5",
-    "@microsoft/api-extractor": "^7.15.0",
-    "rollup": "^2.46.0",
+    "@microsoft/api-documenter": "^7.13.19",
+    "@microsoft/api-extractor": "^7.16.1",
+    "rollup": "^2.51.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "typedoc": "^0.20.36",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.2"
   }
 }
