--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tsbuffer-schema",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "TSBuffer schema declarations",
-  "main": "index.cjs",
+  "main": "index.js",
   "exports": {
-    "require": "./index.cjs",
+    "require": "./index.js",
     "import": "./index.mjs"
   },
   "type": "module",
@@ -42,11 +42,11 @@
   },
   "homepage": "https://github.com/k8w/tsbuffer#readme",
   "devDependencies": {
-    "@microsoft/api-documenter": "^7.13.20",
-    "@microsoft/api-extractor": "^7.16.1",
-    "rollup": "^2.52.0",
+    "@microsoft/api-documenter": "^7.13.63",
+    "@microsoft/api-extractor": "^7.18.16",
+    "rollup": "^2.58.0",
     "rollup-plugin-typescript2": "^0.30.0",
-    "typedoc": "^0.20.36",
-    "typescript": "^4.3.2"
+    "typedoc": "^0.22.5",
+    "typescript": "^4.4.4"
   }
 }
