--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsbuffer-schema",
-  "version": "2.0.6-dev.0",
+  "version": "2.0.6",
   "description": "TSBuffer schema declarations",
   "main": "index.js",
   "exports": {
